--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   jpa:
     database: POSTGRESQL
     show-sql: true
-    hibernate:
-      ddl-auto: create-drop
+    #hibernate:
+      #ddl-auto: create-drop
   datasource:
     platform: postgres
     driverClassName: org.postgresql.Driver
