--- a/security/pom.xml
+++ b/security/pom.xml
@@ -9,9 +9,10 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>core</artifactId>
+	<artifactId>security</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<description>logic and database</description>
+
+	<description>jwt and security</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -19,18 +20,21 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>omg.simple.account</groupId>
-			<artifactId>security</artifactId>
-		</dependency>
-
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-jackson</artifactId>
 		</dependency>
 	</dependencies>
 
