--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <core.version>1.0-SNAPSHOT</core.version>
         <security.version>1.0-SNAPSHOT</security.version>
         <springdoc-webmvc-ui.version>2.0.3</springdoc-webmvc-ui.version>
+        <springdoc-version>1.7.0</springdoc-version>
     </properties>
 
     <dependencies>
@@ -161,11 +162,15 @@
                 <version>${jjwt.version}</version>
             </dependency>
 
-
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>${springdoc-webmvc-ui.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
