--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>core</artifactId>
+	<artifactId>customer</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<description>logic and database</description>
 
