--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>core</module>
+        <module>customer</module>
         <module>security</module>
     </modules>
 
